# eventmanagerbackend

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1a36cb32bf76_.py  4ed4160d84d3_.py  6e0ae90af212_.py  9d55a7c86602_.py  c0ff67de0a4f_initial_migration.py  d4b7a34b7c91_.py  d8ea216ec640_.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  events.py  funds.py  users.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  event.py  fund.py  message.py  user.py
app/schemas/: __init__.py  event.py  fund.py  message.py  token.py  user.py
